<resources>
    <string name="app_name" translatable="false">PITAK</string>
    <string name="confirmations_ncode">Confirmations\ncode</string>
    <string name="confirmations_code">Confirmations code</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="phone_nnumber">Phone\nNumber</string>
    <string name="phone_number">Phone number</string>
    <string name="upload_your_photo_in_good_quality">Upload your photo in good quality</string>
    <string name="name">Name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="save">Save</string>
    <string name="state_number_of_transport">State number of transport</string>
    <string name="carrying_capacity">Carrying capacity (Tonnage)</string>
    <string name="which_are_you">Which are you?</string>
    <string name="client">Client</string>
    <string name="driver">Driver</string>
    <string name="clients">Clients</string>
    <string name="drivers">Drivers</string>
    <string name="wrong_number">Wrong number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="we_send_code_to">We have send code to <![CDATA[<b>]]></string>
    <string name="enter_received_code"><![CDATA[</b>]]> please, enter received code.</string>
    <string name="headline">Headline</string>
    <string name="description">Description</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="price">Price</string>
    <string name="agreement">I have read the terms of publication of the announcement</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort: </string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="on_and_off_notifications">On and off notifications</string>
    <string name="notification">Notification</string>
    <string name="discounts_and_promotions">Discounts, and promotions</string>
    <string name="promotional_code">Promotional code</string>
    <string name="pay24_o_money">Pay24, O! Money</string>
    <string name="pay">Pay</string>
    <string name="list_of_car">List of cars</string>
    <string name="list_of_post">List of posts</string>
    <string name="my_addresses">My addresses</string>
    <string name="trip_history">Trip history</string>
    <string name="my_orders">My Orders</string>
    <string name="to_">To: </string>
    <string name="mark_">Mark: </string>
    <string name="model_">Model: </string>
    <string name="type_">Type: </string>
    <string name="personal_account">Personal account №: 123456789</string>
    <string name="money">Money</string>
    <string name="month">Month</string>
    <string name="before">Before</string>
    <string name="canceled">Canceled</string>
    <string name="new_notification">New notification</string>
    <string name="notify_when_received_new_message">Notify when received new message</string>
    <string name="replies">Replies</string>
    <string name="notify_when_customers_accept_requests">Notify when customers accept requests</string>
    <string name="edit_profile">Edit profile</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="about_app">About app</string>
    <string name="sign_out">Sign out</string>
    <string name="send">Send</string>
    <string name="must_fill">Must fill</string>
    <string name="select_your_vehicle">Select your vehicle</string>
    <string name="must_agree">Must agree</string>
    <string name="posted">Posted</string>
    <string name="nothing_found">Nothing found</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="quota_exceeded">Quota exceeded</string>
    <string name="error">Error</string>
    <string name="user_not_found">User not found</string>
    <string name="internet_error">Internet error</string>
    <string name="are_you_sure_to_sign_out">Are you sure to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="car_mark">Vehicle mark</string>

    <string-array name="phone_codes">
        <item>+996</item>
        <item>+7</item>
    </string-array>
    <string-array name="service_types">
        <item>Service type</item>
        <item>Passenger</item>
        <item>Driver</item>
        <item>Package</item>
        <item>Special tech</item>
        <item>Cargo transportation</item>
    </string-array>
    <string-array name="service_types_driver">
        <item>Service type</item>
        <item>Passenger</item>
        <item>Package</item>
        <item>Special tech</item>
        <item>Cargo transportation</item>
    </string-array>
    <string-array name="service_types_passenger">
        <item>Service type</item>
        <item>Driver</item>
        <item>Special tech</item>
        <item>Cargo transportation</item>
    </string-array>
    <string-array name="sort_types">
        <item>Sort</item>
        <item>Price by descending</item>
        <item>Price by ascending</item>
    </string-array>

    <string name="car_type">Vehicle type</string>
    <string name="car_model">Vehicle model</string>
    <string name="main">Main</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="choose_service_type">Choose service type</string>
    <string name="passenger">Passenger</string>
    <string name="minimum_symbol_20">Minimum 20 characters</string>
    <string name="describe_your_complaint">Describe your complaint</string>
    <string name="choose_a_reason">Choose a reason</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="information">Information</string>
    <string name="agreement_short">Agreement</string>
    <string name="sign_out_from_account">Sign out from account</string>
    <string name="my_posts">My posts</string>
    <string name="my_cars">My cars</string>
    <string name="are_you_sure_to_delete_">Are you sure to delete?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
</resources>
