<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".item_detail.ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/report_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway_black"
                android:gravity="center_vertical"
                android:text="@string/choose_a_reason"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/report_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/raleway_black"
            android:padding="20dp"
            android:text="@string/describe_your_complaint"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/report_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:gravity="start|top"
            android:hint="@string/minimum_symbol_20"
            android:background="@drawable/bg_edit_fields"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/report_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_blue"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>

</ScrollView>