<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".register.WhoRegisterActivity">

    <TextView
        android:id="@+id/who_register_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/raleway_black"
        android:text="@string/which_are_you"
        android:textColor="@color/bluish_black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/who_register_client_btn"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/who_register_title_tv"
        android:layout_margin="20dp"
        android:background="@drawable/bg_gradient_rounded_client_button"
        android:drawableStart="@drawable/ic_users"
        android:drawablePadding="24dp"
        android:fontFamily="@font/raleway_black"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:text="@string/client"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/who_register_driver_btn"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/who_register_client_btn"
        android:layout_margin="20dp"
        android:background="@drawable/bg_gradient_round_driver_button"
        android:drawableStart="@drawable/ic_drivers"
        android:drawablePadding="24dp"
        android:fontFamily="@font/raleway_black"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:text="@string/driver"
        android:textAllCaps="false"
        android:textColor="@color/bluish_black"
        android:textSize="20sp" />

</RelativeLayout>