<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.HistoryActivity">

    <ImageView
        android:id="@+id/settings_history_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <Button
            android:id="@+id/settings_history_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_blue_button"
            android:text="@string/month"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/settings_history_before"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dark_blue_stroke"
            android:text="@string/before"
            android:textAllCaps="false"
            android:textColor="@color/bluish_black" />

        <Button
            android:id="@+id/settings_history_canceled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dark_blue_stroke"
            android:text="@string/canceled"
            android:textAllCaps="false"
            android:textColor="@color/bluish_black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>