<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".settings.AddCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/add"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/raleway_black"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/add_car_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="-36dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/add_car_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_upload_image" />
        <Spinner
            android:id="@+id/add_car_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_drop_down"
            android:padding="14dp" />
        <Spinner
            android:id="@+id/add_car_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_drop_down"
            android:padding="14dp" />
        <Spinner
            android:id="@+id/add_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_drop_down"
            android:padding="14dp" />
        <EditText
            android:id="@+id/add_car_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_fields"
            android:hint="@string/carrying_capacity"
            android:inputType="number"
            android:padding="12dp" />
        <EditText
            android:id="@+id/add_car_number"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_fields"
            android:hint="@string/state_number_of_transport"
            android:padding="12dp" />

        <Button
            android:id="@+id/add_car_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_round_blue_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-65dp"/>
    </LinearLayout>

</ScrollView>