<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.MyCarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/my_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/my_car_back_img"
            android:layout_alignBottom="@id/my_car_back_img"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/my_car_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/my_car_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_driver"
            android:layout_below="@id/my_car_back_img" />

        <TextView
            android:id="@+id/my_car_mark_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_image"
            android:layout_margin="12dp"
            android:fontFamily="@font/raleway_black"
            android:text="@string/mark_"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_car_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_image"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/my_car_mark_text"
            android:fontFamily="@font/raleway_black"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_car_model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_mark"
            android:layout_margin="12dp"
            android:fontFamily="@font/raleway_black"
            android:text="@string/model_"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_mark"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/my_car_model_text"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_car_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_model"
            android:layout_margin="12dp"
            android:fontFamily="@font/raleway_black"
            android:text="@string/type_"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_model"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/my_car_type_text"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/my_car_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_round_green"
            android:fontFamily="@font/raleway_semibold"
            android:layout_below="@id/my_car_type"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/my_car_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/my_car_edit"
            android:background="@drawable/bg_round_grey"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</ScrollView>