<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register.CodeAuthenticationActivity">

    <ImageView
        android:id="@+id/code_register_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/code_register_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/code_register_code_et"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/raleway_black"
        android:text="@string/confirmations_ncode"
        android:textColor="@color/bluish_black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/code_register_code_et"
        android:maxLength="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_edit_fields"
        android:hint="@string/confirmations_code"
        android:inputType="number"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/code_register_phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_register_code_et"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/code_register_next_btn"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_round_blue_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>